--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+$font-family-lato: 'Lato', sans-serif;
+$font-family-montserrat: 'Montserrat', sans-serif;
+$font-family-bowlby: 'Bowlby One SC', cursive;
+
+*{
+    margin:0;
+}
