--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,6 @@ $font-family-bowlby: 'Bowlby One SC', cursive;
 *{
     margin:0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
